2003-09-23  Per Bothner  <per@bothner.com>

	* LList.java (makeList):  Generalize parameter to java.util.List,
	but only if JAVA2.
	* FVector.java (<init>)(Sequence)):  Likewise.

2003-09-14  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (nextMatching):  New method.
	* TreeList.java (newMatching):  New method, based on nextMatchingChild.
	(nextMatchingChild):  Remove.

2003-09-09  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (nextIndex):  Use getIndexDifference.
	* TreeList.java (getIndexDifference):  New method.

2003-09-04  Per Bothner  <per@bothner.com>

	* TreeList.java (dump):  Print attribute type as well as name.

2003-08-02  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (firstAttributePos):  New method.
	* TreeList.java (firstAttributePos):  New method.

	* AttributePredicate.java (isInstance):  Remove xpos parameter.

	* TreeList.java (createPos):  Just call createRelativePos.
	(createRelativePos):  Fix some corner cases.

	* TreeList.java (posToDataIndex):  Fix some corner cases.

	* TreeList.java (copyToList):  New method.
	This is a kludge, since it creates a gnu.xml.NodeTree.
	(getPosNext):  Use use copyToList when copying to new TreeList.

	* TreeList.java (compare):  Simplify and fix using posToDataIndex.

2003-07-26  Per Bothner  <per@bothner.com>

	* TreeList.java (POSITION_PAIR_FOLLOWS):  Make protected.

	* TreeList.java (dump):  Also print identityHashCode.

2003-07-23  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (stableCompare):  New method.
	(compare):  New static 4-argument method.

2003-07-10  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (consumeNext):  Hopefully more efficient.

	* TreeList.java (dump):  Write out class name.

2003-05-09  Per Bothner  <per@bothner.com>

	* AbstractSequence.java.in, Convert.java.in, SeqPosition.java.in,
	Sequence.java.in, SimpleVector.java.in:  Renamed to ...
	* AbstractSequence.java, Convert.java, SeqPosition.java, Sequence.java,